tests/format/junctions/invalid/base-with-deps.bst
kind: junction
sources:
- kind: local
  path: base
depends:
- app.bst
